Re-add delay to PostTask in StartScrollbarPaintTimer()

My previous CL removed 0.1 ms delay from PostTask in
ScrollAnimatorMac::startScrollbarPaintTimer[1] because new PostTask interface
didn't support micro sec delay (type of |delay| was changed from "double" to
"long long"). This seems to give tasks more chances to run before task
cancellation and probably contention happens.

This CL re-adds 1 ms delay (not 0.1 ms because the current PostTask doesn't
support micro sec delay as mentioned above) and confirmed it improved the scroll
animation in the demo page (see the issue).

[1] https://codereview.chromium.org/2514733002/

BUG=713669

Review-Url: https://codereview.chromium.org/2868783006
Cr-Commit-Position: refs/heads/master@{#470823}

Former-commit-id: 570b67158dabf2d9f10bb12ac68762e973ed63ad